other login options icons or fonts displayed

--- a/user_app/templates/signin.html
+++ b/user_app/templates/signin.html
@@ -28,7 +28,7 @@
        <div class="">
   <ul class="nav nav-pills nav-justified " id="ex1" role="tablist">
       <li class="nav-item" role="presentation">
-        <a class="nav-link active" id="tab-login" data-mdb-toggle="pill" href="#pills-login" role="tab"
+        <a class="nav-link active" id="tab-login" data-mdb-toggle="pill" href="pills-login" role="tab"
           aria-controls="pills-login" aria-selected="true">Login</a>
       </li>
       <li class="nav-item" role="presentation">
@@ -38,10 +38,13 @@
     </ul>
   </div>
       <div class="tab-pane fade show active" id="pills-login" role="tabpanel" aria-labelledby="tab-login">
+       <!--form begin-->
         <form method='post'>
             {% csrf_token %}
           <div class="text-center mb-3">
             <p>Sign in with:</p>
+
+            <!--icons for other login methods-->
             <button type="button" class="btn btn-link btn-floating mx-1">
               <i class="fab fa-facebook-f"></i>
             </button>
@@ -61,18 +64,19 @@
     
           <p class="text-center">or:</p>
     
-          <!-- Email input -->
+          <!-- Email or user input -->
           <div class="form-outline mb-4">
-            <input type="text" id="username" name='username' class="form-control" />
+            <input type="text" id="username" name='username' class="form-control" required=True/>
             <label class="form-label" for="usernam">Email or username</label>
           </div>
     
           <!-- Password input -->
           <div class="form-outline mb-4">
-            <input type="password" id="password" name='password' class="form-control" />
-            <label class="form-label" for="password">Password</label>
+            <input type="password" id="password" name='password' class="form-control" required=True />
+            <label class="form-label" for="password">Password</label></br>
+      
           </div>
-    
+          
           <!-- 2 column grid layout -->
           <div class="row mb-4">
             <div class="col-md-6 d-flex justify-content-center">
@@ -91,82 +95,15 @@
     
           <!-- Submit button -->
           <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
-    
+          
           <!-- Register buttons -->
           <div class="text-center">
             <p>Not a member? <a href="#!">Register</a></p>
           </div>
+          
         </form>
       </div>
-      <!--sign up with-->
-      <div class="tab-pane fade" id="pills-register" role="tabpanel" aria-labelledby="tab-register">
-        <form>
-          <div class="text-center mb-3">
-            <p>Sign up with:</p>
-            <button type="button" class="btn btn-link btn-floating mx-1">
-              <i class="fab fa-facebook-f"></i>
-            </button>
-    
-            <button type="button" class="btn btn-link btn-floating mx-1">
-              <i class="fab fa-google"></i>
-            </button>
-    
-            <button type="button" class="btn btn-link btn-floating mx-1">
-              <i class="fab fa-twitter"></i>
-            </button>
-    
-            <button type="button" class="btn btn-link btn-floating mx-1">
-              <i class="fab fa-github"></i>
-            </button>
-          </div>
-    
-          <p class="text-center">or:</p>
-    
-          <!-- Name input -->
-          <div class="form-outline mb-4">
-            <input type="text" id="registerName" class="form-control" />
-            <label class="form-label" for="registerName">Name</label>
-          </div>
-    
-          <!-- Username input -->
-          <div class="form-outline mb-4">
-            <input type="text" id="registerUsername" class="form-control" />
-            <label class="form-label" for="registerUsername">Username</label>
-          </div>
-    
-          <!-- Email input -->
-          <div class="form-outline mb-4">
-            <input type="email" id="registerEmail" class="form-control" />
-            <label class="form-label" for="registerEmail">Email</label>
-          </div>
-    
-          <!-- Password input -->
-          <div class="form-outline mb-4">
-            <input type="password" id="registerPassword" class="form-control" />
-            <label class="form-label" for="registerPassword">Password</label>
-          </div>
-    
-          <!-- Repeat Password input -->
-          <div class="form-outline mb-4">
-            <input type="password" id="registerRepeatPassword" class="form-control" />
-            <label class="form-label" for="registerRepeatPassword">Repeat password</label>
-          </div>
-    
-          <!-- Checkbox -->
-          <div class="form-check d-flex justify-content-center mb-4">
-            <input class="form-check-input me-2" type="checkbox" value="" id="registerCheck" checked
-              aria-describedby="registerCheckHelpText" />
-            <label class="form-check-label" for="registerCheck">
-              I have read and agree to the terms
-            </label>
-          </div>
-    
-          <!-- Submit button -->
-          <button type="submit" class="btn btn-primary btn-block mb-3">Sign in</button>
-        </form>
-      </div>
-    </div>
-  </div>
+      
     {% endblock content%}
    
    
