--- a/user_app/templates/signin.html
+++ b/user_app/templates/signin.html
@@ -28,7 +28,7 @@
        <div class="">
   <ul class="nav nav-pills nav-justified " id="ex1" role="tablist">
       <li class="nav-item" role="presentation">
-        <a class="nav-link active" id="tab-login" data-mdb-toggle="pill" href="pills-login" role="tab"
+        <a class="nav-link active" id="tab-login" data-mdb-toggle="pill" href="{% url 'signin' %}" role="tab"
           aria-controls="pills-login" aria-selected="true">Login</a>
       </li>
       <li class="nav-item" role="presentation">
@@ -43,7 +43,7 @@
             {% csrf_token %}
           <div class="text-center mb-3">
             <p>Sign in with:</p>
-
+          
             <!--icons for other login methods-->
             <button type="button" class="btn btn-link btn-floating mx-1">
               <i class="fab fa-facebook-f"></i>
@@ -76,6 +76,12 @@
             <label class="form-label" for="password">Password</label></br>
       
           </div>
+          <!--error_massage-->
+          {% if error_message %}
+          <div class="alert alert-danger" role="alert">
+            {{ error_message }}
+          </div>
+          {% endif %}
           
           <!-- 2 column grid layout -->
           <div class="row mb-4">
