--- a/user_app/templates/signin.html
+++ b/user_app/templates/signin.html
@@ -32,7 +32,7 @@
           aria-controls="pills-login" aria-selected="true">Login</a>
       </li>
       <li class="nav-item" role="presentation">
-        <a class="nav-link" id="tab-register" data-mdb-toggle="pill" href="#pills-register" role="tab"
+        <a class="nav-link" id="tab-register" data-mdb-toggle="pill" href="{% url 'signup' %}" role="tab"
           aria-controls="pills-register" aria-selected="false">Register</a>
       </li>
     </ul>
