--- a/user_app/templates/signup.html
+++ b/user_app/templates/signup.html
@@ -2,7 +2,7 @@
 
     <!--sing up form -->
 {% block content %}
-   
+   <!--
     <h1>Sign Up</h1>
     <form method='post'>
     {% csrf_token %}
@@ -11,17 +11,105 @@
     <button type='submit'>Create</button>
     </form><br>
 
-    <!--sign in button-->
     <a href="{% url 'signin' %}">Signin</a>
 
-     <!--display the new user name-->
     {% if user %}
     <b>new user : {{user.username}}</b>
     {% endif %}
-    <!--display the error_massage-->
     {% if error_massage %}
     <b>{{error_massage}}</b>
-    {% endif %}
-
+    {% endif %} -->
+    <div class="d-flex justify-content-center pt-2  "> 
+ 
+        <!-- Pills content -->
+        <div class="tab-content bg-info p-3 rounded">
+          <!-- Pills navs -->
+           <div class="">
+      <ul class="nav nav-pills nav-justified " id="ex1" role="tablist">
+          <li class="nav-item" role="presentation">
+            <a class="nav-link " id="tab-login" data-mdb-toggle="pill" href="{% url 'signin' %}" role="tab"
+              aria-controls="pills-login" aria-selected="true">Login</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a class="nav-link active" id="tab-register" data-mdb-toggle="pill" href="{% url 'signup' %}" role="tab"
+              aria-controls="pills-register" aria-selected="false">Register</a>
+          </li>
+        </ul>
+      </div>
+    <div class="tab-pane fade show active" id="pills-register" role="tabpanel" aria-labelledby="tab-register">
+        <form>
+          <div class="text-center mb-3">
+            <p>Sign up with:</p>
+            <button type="button" class="btn btn-link btn-floating mx-1">
+              <i class="fab fa-facebook-f"></i>
+            </button>
+    
+            <button type="button" class="btn btn-link btn-floating mx-1">
+              <i class="fab fa-google"></i>
+            </button>
+    
+            <button type="button" class="btn btn-link btn-floating mx-1">
+              <i class="fab fa-twitter"></i>
+            </button>
+    
+            <button type="button" class="btn btn-link btn-floating mx-1">
+              <i class="fab fa-github"></i>
+            </button>
+          </div>
+    
+          <p class="text-center">or:</p>
+    
+          <!-- Name input -->
+          <div class="form-outline mb-4">
+            <input type="text" id="registerName" class="form-control" />
+            <label class="form-label" for="registerName">Name</label>
+          </div>
+    
+          <!-- Username input -->
+          <div class="form-outline mb-4">
+            <input type="text" id="registerUsername" class="form-control" />
+            <label class="form-label" for="registerUsername">Username</label>
+          </div>
+    
+          <!-- Email input -->
+          <div class="form-outline mb-4">
+            <input type="email" id="registerEmail" class="form-control" />
+            <label class="form-label" for="registerEmail">Email</label>
+          </div>
+    
+          <!-- Password input -->
+          <div class="form-outline mb-4">
+            <input type="password" id="registerPassword" class="form-control" />
+            <label class="form-label" for="registerPassword">Password</label>
+          </div>
+    
+          <!-- Repeat Password input -->
+          <div class="form-outline mb-4">
+            <input type="password" id="registerRepeatPassword" class="form-control" />
+            <label class="form-label" for="registerRepeatPassword">Repeat password</label>
+          </div>
+    
+          <!-- Checkbox -->
+          <div class="form-check d-flex justify-content-center mb-4">
+            <input class="form-check-input me-2" type="checkbox" value="" id="registerCheck" checked
+              aria-describedby="registerCheckHelpText" />
+            <label class="form-check-label" for="registerCheck">
+              I have read and agree to the terms
+            </label>
+          </div>
+    
+          <!-- Submit button -->
+         
+          <button type="submit" class="btn btn-primary btn-block mb-3">Sign in</button>
+          <!-- Display error message -->
+        
+        </form>
+    </div>
+</div>
+          
+        
+      </div>
+   
+  
     {% endblock content %}
    
