--- a/user_app/templates/signin.html
+++ b/user_app/templates/signin.html
@@ -67,13 +67,13 @@
           <!-- Email or user input -->
           <div class="form-outline mb-4">
             <input type="text" id="username" name='username' class="form-control" required=True/>
-            <label class="form-label" for="usernam">Email or username</label>
+            <label class="form-label" for="Username">Email or username</label>
           </div>
     
           <!-- Password input -->
           <div class="form-outline mb-4">
             <input type="password" id="password" name='password' class="form-control" required=True />
-            <label class="form-label" for="password">Password</label></br>
+            <label class="form-label" for="Password">Password</label></br>
       
           </div>
           <!--error_massage-->
