--- a/user_app/templates/signin.html
+++ b/user_app/templates/signin.html
@@ -88,7 +88,7 @@
             <div class="col-md-6 d-flex justify-content-center">
               <!-- Checkbox -->
               <div class="form-check mb-3 mb-md-0">
-                <input class="form-check-input" type="checkbox" value="" id="loginCheck" checked />
+                <input class="form-check-input" type="checkbox" value="" id="loginCheck" required=True />
                 <label class="form-check-label" for="loginCheck"> Remember me </label>
               </div>
             </div>
