Email input field added

--- a/user_app/templates/signup.html
+++ b/user_app/templates/signup.html
@@ -68,7 +68,11 @@
             <label class="form-label" for="Usernam">Username or Email</label>
           </div>
     
-          
+          <!-- Email input -->
+          <div class="form-outline mb-4">
+            <input type="email" id="email" name='email' class="form-control" />
+            <label class="form-label" for="email">Email</label>
+          </div>
     
           <!-- Password input -->
           <div class="form-outline mb-4">
