--- a/user_app/templates/signin.html
+++ b/user_app/templates/signin.html
@@ -49,10 +49,10 @@
               <i class="fab fa-facebook-f"></i>
             </button>
     
-            <button type="button" class="btn btn-link btn-floating mx-1">
+            <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn btn-link btn-floating mx-1">
               <i class="fab fa-google"></i>
-            </button>
-    
+          </a>
+          
             <button type="button" class="btn btn-link btn-floating mx-1">
               <i class="fab fa-twitter"></i>
             </button>
@@ -88,7 +88,7 @@
             <div class="col-md-6 d-flex justify-content-center">
               <!-- Checkbox -->
               <div class="form-check mb-3 mb-md-0">
-                <input class="form-check-input" type="checkbox" value="" id="loginCheck" required=True />
+                <input class="form-check-input" type="checkbox" value="" id="loginCheck" required=True  />
                 <label class="form-check-label" for="loginCheck"> Remember me </label>
               </div>
             </div>
